<resources>
    <string name="app_name">DouyinTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="friendse_fragment">FriendsFragment</string>
    <string name="Messages_fragment">MessageseFragment</string>
    <string name="me_fragment">MeFragment</string>
    <string name="user_center_fragment">UserCenterFragment</string>
    <string name="hoem_main_fragment">HomeMainFragment</string>
    <string name="live_brodcast">直播</string>
    <string name="fragment_local">LocalFragment</string>
    <string name="attention_fragment">AttentionFragment</string>
    <string name="recommand_fragment">RecommandFragment</string>
    <string name="recommand">推荐</string>
    <string name="tv_num">12</string>

    <!-- 点赞选中 -->
    <string name="icon_like_fill">&#xe60d;</string>
    <!--评论-->
    <string name="icon_comment">&#xe621;</string>
    <!-- 微博 -->
    <string name="icon_weibo">&#xe620;</string>
    <!-- 微信 -->
    <string name="icon_wechat">&#xe61d;</string>
    <!-- 微信朋友圈 -->
    <string name="icon_friends">&#xe61c;</string>
    <!-- QQ -->
    <string name="icon_qq">&#xe61e;</string>
    <!-- QQ空间 -->
    <string name="icon_qq_space">&#xe61f;</string>
    <!-- 更多 -->
    <string name="icon_more">&#xe61b;</string>
    <!-- 地理位置 -->
    <string name="icon_location_fill">&#xe624;</string>
    <string name="user_works_fragment">UserWorksFragment</string>
    <string name="user_likes_fragment">UserLikesFragment</string>
    <string name="user_test">忠实用户A-Bill</string>
    <string name="attention">关注</string>
    <string name="search_hint">SearchActivity</string>
    <string name="home_title">首页</string>
    <string name="friend_title">朋友</string>
    <string name="mess_title">消息</string>
    <string name="me_title">我</string>
    <string name="share_icon">share_icon</string>
    <string name="advice_start">仅供测试学习   --黄浩</string>
    <string name="soccer_today">\@今日足球</string>
    <string name="content_test">2018世界杯法国夺冠 #俄罗斯世界杯 @妞妞 https://www.baidu.com</string>
    <string name="subcontent_test">法国 4：2 克罗地亚，法国时隔20年再举大力神杯</string>
    <string name="iv_focus">iv_focus</string>
    <string name="iv_record">iv_record</string>
    <string name="search_content">Search Content</string>
    <string name="video_list_toolbar">VideoList</string>
    <string name="video_play_hint">VideoPlay</string>
</resources>